2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Add updated to things.  Set it when saving.

2011-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Fix a traceback when editing a non-existant id.

2011-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  If we already decode utf-8 when passing args to commands, don't
	  do it again in Add.

2011-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Add an option to only count open things; for scripts graphing
	  my urgency tasks.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle utf-8 everywhere.  Assume input from command line and
	  terminal is in utf-8 for now.
	* python/mushin/command/display.py:
	* python/mushin/common/parse.py:
	  Handle utf-8.  Document. add aserts.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Allow specifying a different database than mushin.
	* python/mushin/command/main.py:
	  Add a getServer() method on the root GTD command.
	  Use it everywhere.
	* python/mushin/command/list.py:
	* python/mushin/command/project.py:
	* python/mushin/command/thing.py:
	  Use it everywhere.

2011-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/parse.py:
	  Add some missing constants from gtd.py.  Caught by pychecker.

2010-09-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Properly filter on statuses too.  Makes search !waitingfor
	  work again.

2010-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-due/map.js:
	* python/mushin/common/app.py:
	  Use new views.
	  add getStatutes and getThingsByProject.
	* python/mushin/maemo/new.py:
	  Fix up contexts and statutes.